# fastai

./: .gitmodules  LICENSE.txt  README.md  environment.yml  fastai.code-workspace  pyproject.toml
src/fai/: __about__.py  __init__.py
tests/: __init__.py
